cmake_minimum_required(VERSION 2.8.3)
project(python_ros_interface)
find_package(catkin REQUIRED COMPONENTS rostest)
catkin_python_setup()
catkin_package()
if(CATKIN_ENABLE_TESTING)
  catkin_add_nosetests(test/test_rosmsg.py)
  catkin_add_nosetests(test/test_ros_interface.py)
  catkin_add_nosetests(test/test_connection.py)
endif()
