<?xml version="1.0"?>
<package>
  <name>python_ros_interface</name>
  <version>0.0.0</version>
  <description>Simplified ROS Python interfaces</description>
  <maintainer email="otamachan@gmail.com">Tamaki Nishino</maintainer>
  <license>Apache2</license>
  <url type="website">http://wiki.ros.org/python_ros_interface</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>tf</run_depend>
  <test_depend>python-nose</test_depend>
  <test_depend>rospy_tutorials</test_depend>
  <test_depend>actionlib_tutorials</test_depend>
  <export/>
</package>
